# rust-refactor-mcp

./: Cargo.toml  PLAN.md  README.md  SKILL.md  agents.md  files_needing_buffa.txt  test_mcp_call.json
docker_test/: Dockerfile  run_tests.py  run_tests.sh
fixtures/: complex.rs  medium.rs  simple.rs
fixtures/project/src/: cache.rs  complex.rs  document.rs  error.rs  format_html.rs  lib.rs  markdownparser.rs  medium.rs  parser.rs  simple.rs  usage.rs  user.rs
fixtures/ssr/: test.rs
fixtures/test_package/src/: bar.rs  baz.rs  foo.rs  lib.rs
fixtures/usage/: complex_usage.rs  complex_usage2.rs  medium_usage.rs  simple_usage.rs
src/: bytespan.rs  cleanup_imports_in_ast.rs  cleanup_unused_imports.rs  cli_main.rs  collapse_blank_lines.rs  collect_referenced_identifiers.rs  collect_use_names.rs  dead_code_finder.rs  dependency_graph.rs  dependency_graph_analyzer.rs  detect_cross_refs_for_extracted.rs  detect_needed_imports_for_extracted.rs  extract.rs  extract_module_path.rs  extractresult.rs  find_extracted_indices.rs  fix_cargo.rs  format_code.rs  format_ty_name.rs  get_item_name.rs  handle_initialize.rs  handle_tools_call.rs  handle_tools_list.rs  has_use_ref.rs  identcollector.rs  is_import_used.rs  item_type.rs  jsonrpcrequest.rs  line_col_to_byte.rs  macro_expander.rs  main.rs  make_item_pub.rs  mcp.rs  merge_spans.rs  namevisitor.rs  optimize_imports.rs  preflight_validator.rs  qualpathreplacer.rs  remove_spans.rs  rename_entity.rs  (+8 more)
tests/: integration_test.rs  test_collect_use_names.rs  test_parse.rs
