[package]
name = "rust-refactor-mcp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/main.rs"

[[bin]]
name = "rust-refactor-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
prettyplease = "0.2"
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "macros"] }

[dev-dependencies]
tempfile = "3"